#
# Copyright (c) 2022 University of Colorado
# Licensed under the MIT license. See LICENSE.txt file in the MORIS root for details.
#
#------------------------------------------------------------------------------------
#

add_subdirectory(thermal)
add_subdirectory(structure)
add_subdirectory(fluid)
add_subdirectory(optimization)
add_subdirectory(mesh_generation)


